src/test/resources/acceptance/reject/invalidOperatorAmpersand.ul
void bar ()
{
    1 & 1;
}
